# notion-kobo-assistant

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml
client/: .gitignore  Pipfile  manage.py  pytest.ini  requirements.txt
client/pandora/: settings.py  urls.py  wsgi.py
client/pandora/tasks/: admin.py  filters.py  forms.py  imports.py  kobo.py  models.py  urls.py  views.py
client/pandora/tasks/management/commands/: kobo_sync.py
client/pandora/tasks/migrations/: 0001_initial.py  0002_article_highlight_fields.py  0003_make_completed_at_datetime.py
client/pandora/tasks/templates/tasks/: alert.html  article_create_form.html  article_detail.html  article_filter.html  article_list.html  article_table_detail.html
client/pandora/tasks/tests/: test_forms.py  test_imports.py  test_migrations.py
client/pandora/templates/: base.html
prank/: collection.py  config.py  config.yml  converter.py  generators.py  main.py  original.py  ptypes.py
prank/converters/: epub.py
prank/syncing/: __init__.py  article.py
prank/tests/: enrich.py  test_converters.py  test_generators.py
server/: .gitignore  Pipfile  run.py  run_client.sh  run_file_store.sh  setup.cfg
server/app/: __init__.py  create_db.py  imports.py  models.py  sqlite.db  views.py
server/app/templates/: index.html
tui/: exceptions.py  icons.py  main.css  main.py
tui/api/: models.py
tui/components/: markdown.py  notification.py  stopwatch.py  table.py
