[tool.poetry]
name = "pandora"
version = "0.1.0"
description = ""
authors = ["Oliver Yerbury-Hodgson <oyerburyhodgson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
textual = { git = "https://github.com/textualize/textual", rev = "8e6f2b7ae01a97f71d9b37fec67ebd762bb0a6b4" }
peewee = "^3.15.3"
beautifulsoup4 = "^4.11.1"
readabilipy = "^0.2.0"
markdownify = "^0.11.6"

[tool.poetry.dev-dependencies]
aiohttp = "^3.8.3"
msgpack = "^1.0.4"
pytest = "^7.1.3"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
